RI-7328: Fix capabilities alignment by removing additional component and styles (#4872)
* fix capabilities alignment by removing additional component and styles
* remove the blue color and set to default

--- a/redisinsight/ui/src/pages/home/components/styles.module.scss
+++ b/redisinsight/ui/src/pages/home/components/styles.module.scss
@@ -47,29 +47,6 @@
   margin-left: 10px;
 }
 
-.dbInfoModules {
-  padding-right: 0;
-  margin-left: 0;
-  height: 27px;
-  & > div {
-    display: inline-block;
-    line-height: 20px;
-    margin-top: 5px;
-    vertical-align: top;
-  }
-}
-
-.dbInfoModulesLabel {
-  position: relative;
-  display: inline-block !important;
-  padding-right: 0 !important;
-  width: auto;
-
-  :global(.euiListGroupItem__text) {
-    padding-right: 0 !important;
-  }
-}
-
 .anchorEndpoints {
   position: absolute;
   right: 12px;
